force-app/main/default/objects/Block_Unit__c/Block_Unit__c.object-meta.xml
<CustomObject>
    <label>Hold Unit</label>
    <nameField>
        <displayFormat>BU-{0000}</displayFormat>
        <label>Block Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hold Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>