force-app/main/default/objects/Block_Unit__c/fields/date_time_of_last_unit_status_change__c.field-meta.xml
<CustomField>
    <fullName>date_time_of_last_unit_status_change__c</fullName>
    <label>date time of last unit status change</label>
    <type>DateTime</type>
</CustomField>