force-app/main/default/objects/Block_Unit__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipName>Block_Units</relationshipName>
    <type>Lookup</type>
</CustomField>