force-app/main/default/objects/Block_Unit__c/fields/Sales_Manager_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Email_Id__c</fullName>
    <label>Sales Manager Email Id</label>
    <type>Email</type>
</CustomField>