force-app/main/default/objects/Block_Unit__c/validationRules/DataandTimeofHoldUnitisnotlessthanNow.validationRule-meta.xml
<ValidationRule>
    <fullName>DataandTimeofHoldUnitisnotlessthanNow</fullName>
    <active>true</active>
    <errorConditionFormula>IF(     NOT(ISBLANK(Date_and_Time_of_Unhold_Unit__c )),
Date_and_Time_of_Unhold_Unit__c &lt; Now(),False)</errorConditionFormula>
    <errorMessage>You cannot select back Date and Time</errorMessage>
</ValidationRule>