force-app/main/default/objects/Block_Unit__c/validationRules/Unit_Should_be_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Should_be_Available</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Unit__r.Unit_Status__c, &apos;Available&apos;))</errorConditionFormula>
    <errorDisplayField>Unit__c</errorDisplayField>
    <errorMessage>Selected unit is not in Available status to hold.</errorMessage>
</ValidationRule>