force-app/main/default/objects/Block_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Date_and_Time_of_Hold_Unit__c</columns>
    <columns>Date_and_Time_of_Unhold_Unit__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>